test/reject/masked_modulo.rk
rake masked_modulo(x: f32s, y: f32s) -> f32s:
  tine #active when x >= <0.0>

  through #active else <0.0> into computed:
    x % y

  return sweep:
    | #active => computed
    | _       => <0.0>
